force-app/main/default/objects/Product_Notification__c/Product_Notification__c.object-meta.xml
<CustomObject>
    <label>Product Notification</label>
    <nameField>
        <displayFormat>M69-{0000}</displayFormat>
        <label>Product Notification  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>