force-app/main/default/objects/Product_Notification__c/fields/Product_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Product_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Catalog</label>
    <referenceTo>Product_Catalog__c</referenceTo>
    <relationshipLabel>Product Notifications</relationshipLabel>
    <relationshipName>Product_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>